--- a/node/web-server/public/about/index.html
+++ b/node/web-server/public/about/index.html
@@ -2,5 +2,9 @@
 <html>
 <head>
   <title>About page</title>
+  <link rel="stylesheet" href="/css/styles.css" />
 </head>
+<body>
+  <h1>About page</h1>
+</body>
 </html>
