--- a/node/web-server/public/index.html
+++ b/node/web-server/public/index.html
@@ -5,6 +5,7 @@
     <title>
       Static file
     </title>
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <h1>DID IT</h1>
