connect to websocket from client side

--- a/node/chat-app/public/index.html
+++ b/node/chat-app/public/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Chat App</title>
-</head>
-<body>
-Chat App
-</body>
+  <head>
+    <title>Chat App</title>
+    <script src="/socket.io/socket.io.js" defer></script>
+    <script src="/js/chat.js" defer></script>
+  </head>
+
+  <body>
+    Chat App
+  </body>
 </html>
