increment button updates count on server and client

--- a/node/chat-app/public/index.html
+++ b/node/chat-app/public/index.html
@@ -8,6 +8,12 @@
 
   <body>
     Chat App
-    <div id="count"></div>
+    <div>
+      <button id="increment">+1</button>
+      <br>
+      <p>
+        Connection count: <span id="count"></span>
+      </p>
+    </div>
   </body>
 </html>
