add chat message form

--- a/node/chat-app/public/index.html
+++ b/node/chat-app/public/index.html
@@ -15,5 +15,9 @@
         Connection count: <span id="count"></span>
       </p>
     </div>
+    <form id="chatForm">
+      <input id="chatMessage" type="text" size="40" placeholder="Enter your message"/>
+      <button id="chatFormSubmit">Submit</button>
+    </form>
   </body>
 </html>
