refactor for readability

--- a/node/chat-app/public/index.html
+++ b/node/chat-app/public/index.html
@@ -16,7 +16,7 @@
       </p>
     </div>
     <form id="chatForm">
-      <input id="chatMessage" type="text" size="40" placeholder="Enter your message"/>
+      <input name="message" type="text" size="40" placeholder="Enter your message"/>
       <button id="chatFormSubmit">Submit</button>
     </form>
   </body>
