--- a/node/chat-app/public/index.html
+++ b/node/chat-app/public/index.html
@@ -19,5 +19,6 @@
       <input name="message" type="text" size="40" placeholder="Enter your message"/>
       <button id="chatFormSubmit">Submit</button>
     </form>
+    <button id="send-location">Send Location</button>
   </body>
 </html>
