rename location button id to stick with standard

--- a/node/chat-app/public/index.html
+++ b/node/chat-app/public/index.html
@@ -19,6 +19,6 @@
       <input name="message" type="text" size="40" placeholder="Enter your message"/>
       <button id="chatFormSubmit">Submit</button>
     </form>
-    <button id="send-location">Send Location</button>
+    <button id="sendLocation">Send Location</button>
   </body>
 </html>
