--- a/node/chat-app/public/index.html
+++ b/node/chat-app/public/index.html
@@ -13,7 +13,7 @@
 
   <body>
     Chat App
-    
+
     <div id="messages"></div>
 
     <form id="chatForm">
@@ -22,7 +22,7 @@
     </form>
     <button id="sendLocation">Send Location</button>
 
-    <script id="message-template" type="text/html">
+    <script id="messageTemplate" type="text/html">
       <div>
         <p> This is a message </p>
       </div>
