insert new messages to messages div

--- a/node/chat-app/public/index.html
+++ b/node/chat-app/public/index.html
@@ -24,7 +24,7 @@
 
     <script id="messageTemplate" type="text/html">
       <div>
-        <p> This is a message </p>
+        <p>{{message}}</p>
       </div>
     </script>
   </body>
