--- a/node/chat-app/public/index.html
+++ b/node/chat-app/public/index.html
@@ -22,9 +22,15 @@
     </form>
     <button id="sendLocation">Send Location</button>
 
+    <!-- Templates -->
     <script id="messageTemplate" type="text/html">
       <div>
         <p>{{message}}</p>
+      </div>
+    </script>
+    <script id="locationTemplate" type="text/html">
+      <div>
+        <p><a href="{{url}}">My current location</a></p>
       </div>
     </script>
   </body>
