open location link in new tab

--- a/node/chat-app/public/index.html
+++ b/node/chat-app/public/index.html
@@ -30,7 +30,7 @@
     </script>
     <script id="locationTemplate" type="text/html">
       <div>
-        <p><a href="{{url}}">My current location</a></p>
+        <p><a href="{{url}}" target="_blank">My current location</a></p>
       </div>
     </script>
   </body>
