include timestamps with message template

--- a/node/chat-app/public/index.html
+++ b/node/chat-app/public/index.html
@@ -25,7 +25,7 @@
     <!-- Templates -->
     <script id="messageTemplate" type="text/html">
       <div>
-        <p>{{message}}</p>
+        <p>{{message}} <span class="timestamp">- {{createdAt}}</span></p>
       </div>
     </script>
     <script id="locationTemplate" type="text/html">
