--- a/node/chat-app/public/index.html
+++ b/node/chat-app/public/index.html
@@ -25,12 +25,12 @@
     <!-- Templates -->
     <script id="messageTemplate" type="text/html">
       <div>
-        <p>{{message}} <span class="timestamp">- {{createdAt}}</span></p>
+        <p> <span class="timestamp">{{createdAt}} -</span>{{message}}</p>
       </div>
     </script>
     <script id="locationTemplate" type="text/html">
       <div>
-        <p><a href="{{url}}" target="_blank">My current location</a> <span class="timestamp">- {{createdAt}}</span></p>
+        <p> <span class="timestamp">{{createdAt}} -</span><a href="{{url}}" target="_blank">My current location</a></p>
       </div>
     </script>
   </body>
