link icon and css file

--- a/node/chat-app/public/index.html
+++ b/node/chat-app/public/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>Chat App</title>
+    <!-- Assets -->
+    <link rel="icon" href="/images/favicon.png">
+    <!-- CSS -->
+    <link rel="stylesheet" href="/css/styles.css">
     <!-- JS -->
     <script src="/socket.io/socket.io.js" defer></script>
     <script src="/js/chat.js" defer></script>
