link temporary CSS file

--- a/node/chat-app/public/index.html
+++ b/node/chat-app/public/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="/images/favicon.png">
     <!-- CSS -->
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/temp.css">
     <!-- JS -->
     <script src="/socket.io/socket.io.js" defer></script>
     <script src="/js/chat.js" defer></script>
