use chat__messages class

--- a/node/chat-app/public/index.html
+++ b/node/chat-app/public/index.html
@@ -22,7 +22,7 @@
 
       </div>
       <div class="chat__main">
-        <div id="messages"></div>
+        <div id="messages" class="chat__messages"></div>
 
         <form id="chatForm">
           <input name="message" type="text" placeholder="Enter your message"/>
@@ -32,9 +32,7 @@
         <button id="sendLocation">Send Location</button>
       </div>
     </div>
-
-    Chat App
-
+    
     <!-- Templates -->
     <script id="messageTemplate" type="text/html">
       <div>
