fix bug breaking url in sendLocation

--- a/node/chat-app/public/chat.html
+++ b/node/chat-app/public/chat.html
@@ -50,7 +50,7 @@
           <span class="message__name">User Name</span>
           <span class="timestamp">{{createdAt}}</span>
         </p>
-        <p><a href="{{url}}" target="_blank">My current location</a></p>
+        <p><a href="{{url.url}}" target="_blank">My current location</a></p>
       </div>
     </script>
   </body>
