reset to state before adding username to messages

--- a/node/chat-app/public/chat.html
+++ b/node/chat-app/public/chat.html
@@ -38,7 +38,7 @@
     <script id="messageTemplate" type="text/html">
       <div class="message">
         <p>
-          <span class="message__name">{{username}}</span>
+          <span class="message__name">username</span>
           <span class="timestamp">{{createdAt}}</span>
         </p>
         <p>{{message}}</p>
@@ -47,7 +47,7 @@
     <script id="locationTemplate" type="text/html">
       <div class="message">
         <p>
-          <span class="message__name">{{username}}</span>
+          <span class="message__name">username</span>
           <span class="timestamp">{{createdAt}}</span>
         </p>
         <p><a href="{{url.url}}" target="_blank">My current location</a></p>
