--- a/node/chat-app/public/chat.html
+++ b/node/chat-app/public/chat.html
@@ -38,7 +38,7 @@
     <script id="messageTemplate" type="text/html">
       <div class="message">
         <p>
-          <span class="message__name">username</span>
+          <span class="message__name">{{username}}</span>
           <span class="timestamp">{{createdAt}}</span>
         </p>
         <p>{{message}}</p>
