--- a/node/chat-app/public/chat.html
+++ b/node/chat-app/public/chat.html
@@ -26,7 +26,7 @@
 
         <div class="compose">
           <form id="chatForm">
-            <input name="message" type="text" placeholder="Enter your message"/>
+            <input name="message" type="text" placeholder="Enter your message" required autocomplete="off"/>
             <button id="chatFormSubmit">Submit</button>
           </form>
           <button id="sendLocation">Send Location</button>
