--- a/node/chat-app/public/chat.html
+++ b/node/chat-app/public/chat.html
@@ -44,6 +44,7 @@
         <p>{{message}}</p>
       </div>
     </script>
+
     <script id="locationTemplate" type="text/html">
       <div class="message">
         <p>
@@ -52,6 +53,16 @@
         </p>
         <p><a href="{{url.url}}" target="_blank">My current location</a></p>
       </div>
+    </script>
+
+    <script id="sidebar-template" type="text/html">
+      <h2 class="room-title">{{room}}</h2>
+      <h3 class="list-title">Users</h3>
+      <ul class="users">
+        {{#users}}
+          <li>{{username}}</li>
+        {{/users}}
+      </url>
     </script>
   </body>
 </html>
