--- a/node/chat-app/public/chat.html
+++ b/node/chat-app/public/chat.html
@@ -55,7 +55,7 @@
       </div>
     </script>
 
-    <script id="sidebar-template" type="text/html">
+    <script id="sidebarTemplate" type="text/html">
       <h2 class="room-title">{{room}}</h2>
       <h3 class="list-title">Users</h3>
       <ul class="users">
