--- a/node/chat-app/public/chat.html
+++ b/node/chat-app/public/chat.html
@@ -18,7 +18,7 @@
 
   <body>
     <div class="chat">
-      <div class="chat__sidebar">
+      <div id="sidebar" class="chat__sidebar">
 
       </div>
       <div class="chat__main">
