--- a/complete-electron/todos/add.html
+++ b/complete-electron/todos/add.html
@@ -10,4 +10,12 @@
 
         <button type="submit">Add</button>
     </form>
+
+    <script>
+        document.querySelector('form').addEventListener('submit', (e) => {
+            e.preventDefault();
+
+            debugger;
+        });
+    </script>
 </body>
