--- a/complete-electron/todos/add.html
+++ b/complete-electron/todos/add.html
@@ -12,10 +12,14 @@
     </form>
 
     <script>
+        const electron = require('electron');
+        const { ipcRenderer } = electron;
+
         document.querySelector('form').addEventListener('submit', (e) => {
             e.preventDefault();
 
-            debugger;
+            const { value } = document.querySelector('input');
+            ipcRenderer.send('todo:add', value);
         });
     </script>
 </body>
