add nodeIntegration to addWindow

--- a/complete-electron/todos/add.html
+++ b/complete-electron/todos/add.html
@@ -15,8 +15,8 @@
         const electron = require('electron');
         const { ipcRenderer } = electron;
 
-        document.querySelector('form').addEventListener('submit', (e) => {
-            e.preventDefault();
+        document.querySelector('form').addEventListener('submit', (event) => {
+            event.preventDefault();
 
             const { value } = document.querySelector('input');
             ipcRenderer.send('todo:add', value);
