--- a/complete-electron/todos/main.html
+++ b/complete-electron/todos/main.html
@@ -3,4 +3,19 @@
 </head>
 <body>
     <h1>My Todos</h1>
+    <ul></ul>
+
+    <script>
+        const electron = require('electron');
+        const { ipcRenderer } = electron;
+
+        ipcRenderer.on('todo:add', (event, todo) => {
+            const list = document.querySelector('ul');
+            const li = document.createElement('li');
+            const text = document.createTextNode(todo);
+
+            li.appendChild(text);
+            list.appendChild(li);
+        });
+    </script>
 </body>
