--- a/complete-electron/todos/main.html
+++ b/complete-electron/todos/main.html
@@ -9,13 +9,18 @@
         const electron = require('electron');
         const { ipcRenderer } = electron;
 
+        const list = document.querySelector('ul');
+
         ipcRenderer.on('todo:add', (event, todo) => {
-            const list = document.querySelector('ul');
             const li = document.createElement('li');
             const text = document.createTextNode(todo);
 
             li.appendChild(text);
             list.appendChild(li);
+        });
+
+        ipcRenderer.on('todo:clearAll', (event, todo) => {
+            list.innerHTML = '';
         });
     </script>
 </body>
