--- a/complete-electron/todos/main.html
+++ b/complete-electron/todos/main.html
@@ -19,7 +19,7 @@
             list.appendChild(li);
         });
 
-        ipcRenderer.on('todo:clearAll', (event, todo) => {
+        ipcRenderer.on('todo:clearAll', () => {
             list.innerHTML = '';
         });
     </script>
